--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "concurrently": "^3.6.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "material-ui-react": "0.0.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.2.6",
     "node": "^10.7.0",
-    "npm": "^6.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "npm": "^6.3.0",
+    "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.2",
+    "react-icons": "^3.0.4",
+    "react-icons-kit": "^1.1.7",
+    "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "semantic-ui-react": "^0.82.1"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "concurrently \"nodemon server.js\" \"cd ./client  && npm start \" ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd client && npm install && npm run build"
-
   },
   "engines": {
     "node": "8.9.4"
