--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.4",
     "react-icons-kit": "^1.1.7",
+    "react-image-tiler": "^1.1.5",
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
